# FINKI-OOP

./: CMakeLists.txt  LICENSE.md  README.md  main  main.cpp  testPrograma.cpp  vezba2.cpp
Exercises (EN)/: 1.cpp  2.cpp
Labs 8/: main2.cpp
Labs1 Online/: labs1.cpp  labs2.cpp  labs3.cpp
Labs2 Online/: labs1.cpp  labs2.cpp  labs3.cpp
Labs3 Online/: labs1.cpp  labs2.cpp
Zadaci/: zadaca1.cpp  zadaca10.cpp  zadaca15.cpp  zadaca18.cpp  zadaca2.cpp  zadaca20.cpp  zadaca21.cpp  zadaca3.cpp  zadaca6.cpp  zadaca7.cpp  zadaca8.cpp  zadacaLabs.cpp  zadacaOh.cpp
Задачи за вежбање за втор колоквиум и испити/: 1.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  8.cpp
Задачи за вежбање за прв колоквиум/: 1.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp
Задачи за вежбање од лабораториски вежби/: 1.cpp  2.cpp  3.cpp
Лабораториска вежба 10 група A - од дома/: 1.cpp  2.cpp  3.cpp
Лабораториска вежба 3 група Б - од дома/: main1.cpp  main2.cpp
Лабораториска вежба 5 група Б - од дома/: zadaca1.cpp
Лабораториска вежба 9 група Б - од дома/: 1.cpp  2.cpp  3.cpp
