cmake_minimum_required(VERSION 3.28)
project(untitled)

set(CMAKE_CXX_STANDARD 17)

add_executable(labs1_1 "Labs1 Online/labs1.cpp")
add_executable(labs2_1 "Labs1 Online/labs2.cpp")
add_executable(labs3_1 "Labs1 Online/labs3.cpp")

add_executable(labs1_2 "Labs2 Online/labs1.cpp")
add_executable(labs2_2 "Labs2 Online/labs2.cpp")
add_executable(labs3_2 "Labs2 Online/labs3.cpp")

add_executable(labs1_3 "Labs3 Online/labs1.cpp")
add_executable(labs2_3 "Labs3 Online/labs2.cpp")

add_executable(ex1 "Zadaci/zadaca1.cpp")
add_executable(ex2 "Zadaci/zadaca2.cpp")
add_executable(ex3 "Zadaci/zadaca3.cpp")
add_executable(ex6 "Zadaci/zadaca6.cpp")
add_executable(ex7 "Zadaci/zadaca7.cpp")
add_executable(ex8 "Zadaci/zadaca8.cpp")
add_executable(ex10 "Zadaci/zadaca10.cpp")
add_executable(ex15 "Zadaci/zadaca15.cpp")
add_executable(ex18 "Zadaci/zadaca18.cpp")
add_executable(ex20 "Zadaci/zadaca20.cpp")
add_executable(ex21 "Zadaci/zadaca21.cpp")

add_executable(zadacaOh "Zadaci/zadacaOh.cpp")






