add_executable(labs "Labs 8/main.cpp"
        "Лабораториска вежба 3 група Б - од дома/main1.cpp")

add_executable(labs1 "Лабораториска вежба 3 група Б - од дома/main1.cpp")
add_executable(labs2 "Лабораториска вежба 3 група Б - од дома/main2.cpp")
add_executable(z1 "Задачи за вежбање за прв колоквиум/1.cpp")
add_executable(z2 "Задачи за вежбање за прв колоквиум/2.cpp")