add_executable(labs "Лабораториска вежба 8 група А - од дома/main.cpp"
        "Лабораториска вежба 3 група Б - од дома/main1.cpp")

add_executable(labs1 "Лабораториска вежба 3 група Б - од дома/main1.cpp")
add_executable(labs2 "Лабораториска вежба 3 група Б - од дома/main2.cpp")
add_executable(z1 "Задачи за вежбање за прв колоквиум/1.cpp")
add_executable(z2 "Задачи за вежбање за прв колоквиум/2.cpp")
add_executable(z32 "Задачи за вежбање за прв колоквиум/3.cpp")
add_executable(z321 "Задачи за вежбање за прв колоквиум/4.cpp")
add_executable(z322 "Задачи за вежбање за прв колоквиум/5.cpp")
add_executable(z3226 "Задачи за вежбање за прв колоквиум/11.cpp")
add_executable(z121 "Задачи за вежбање за прв колоквиум/12.cpp")
add_executable(z1213 "Задачи за вежбање за прв колоквиум/13.cpp")
add_executable(ls1 "Лабораториска вежба 9 група Б - од дома/1.cpp")
add_executable(ls2 "Лабораториска вежба 9 група Б - од дома/2.cpp")
add_executable(ls3 "Лабораториска вежба 9 група Б - од дома/3.cpp")
add_executable(zadaca1 "Задачи за вежбање за втор колоквиум и испити/2.cpp")
add_executable(zadaca2 "Задачи за вежбање за втор колоквиум и испити/4.cpp")
add_executable(zadaca3 "Задачи за вежбање за втор колоквиум и испити/6.cpp")
add_executable(zadaca4 "Задачи за вежбање за втор колоквиум и испити/8.cpp")
add_executable(zadaca17 "Задачи за вежбање за втор колоквиум и испити/17.cpp")
add_executable(testPrograma "testPrograma.cpp")
add_executable(zadaca12 "Задачи за вежбање за втор колоквиум и испити/1.cpp")
add_executable(zadac5k2 "Задачи за вежбање за втор колоквиум и испити/5.cpp")
add_executable(zadac13k2 "Задачи за вежбање за втор колоквиум и испити/13.cpp")
add_executable(zadaca14k2 "Задачи за вежбање за втор колоквиум и испити/14.cpp")
add_executable(zadaca15k2 "Задачи за вежбање за втор колоквиум и испити/15.cpp")
add_executable(zadaca16k2 "Задачи за вежбање за втор колоквиум и испити/16.cpp")
add_executable(zadaac1z9 "Лабораториска вежба 10 група A - од дома/1.cpp")
add_executable(zadaac1z92 "Лабораториска вежба 10 група A - од дома/2.cpp")
add_executable(zadaac1z92 "Лабораториска вежба 10 група A - од дома/3.cpp")
